# SpaceMachine

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp
include/spacemachine/: SpaceMachine.hpp  TemplateSpaceMachine.hpp
